// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button primary renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#cc517a",
      "borderRadius": 5,
      "height": 46,
      "justifyContent": "center",
      "marginBottom": 10,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 16,
        },
        Object {
          "color": "#FFF",
          "fontSize": 16,
        },
      ]
    }
  >
    Button primary
  </Text>
</View>
`;

exports[`Button secondary renders correctly 1`] = `
<View
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#0badde",
      "borderRadius": 5,
      "height": 46,
      "justifyContent": "center",
      "marginBottom": 10,
      "opacity": 1,
      "paddingHorizontal": 10,
      "paddingVertical": 10,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#FFF",
          "fontSize": 16,
        },
        undefined,
      ]
    }
  >
    Button secondary
  </Text>
</View>
`;
